--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "eslint": "^8.35.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
